--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ pgvector = [ "pgvector", "sqlalchemy" ]
 pgvecto_rs = [ "psycopg2" ]
 redis = [ "redis" ]
 chromadb = [ "chromadb" ]
+lancedb = [ "lancedb" ]
 
 [project.urls]
 "repository" = "https://github.com/zilliztech/VectorDBBench"
